fixed the alignment of the nav-bar links for all size screens

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,6 +4,6 @@
     font-weight: bolder;
 }
 
-.navbar-toggler, {
-    margin-
+#navbarSupportedContent {
+    text-align: right;
 }
